# solana-primitives

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  rust.yml
.kiro/specs/solana-primitives-enhancement/: design.md  requirements.md  tasks.md
docs/: RELEASING.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/decode_tx/: Cargo.toml
examples/decode_tx/src/: main.rs
solana-primitives/: Cargo.toml
solana-primitives/examples/: basic.rs  decode_tx.rs
solana-primitives/src/: borsh_helpers.rs  builder.rs  error.rs  lib.rs  short_vec.rs
solana-primitives/src/builder/: data.rs  instruction.rs  mod.rs  tests.rs  transaction.rs  versioned.rs
solana-primitives/src/crypto/: keypair.rs  mod.rs  pda.rs  signature.rs
solana-primitives/src/instructions/: anchor.rs  associated_token.rs  compute_budget.rs  mod.rs  system.rs  token.rs
solana-primitives/src/jsonrpc/: client.rs  mod.rs  response.rs
solana-primitives/src/rpc/: client.rs  mod.rs  request.rs  types.rs  websocket.rs
solana-primitives/src/rpc/methods/: account.rs  mod.rs  program.rs  transaction.rs
solana-primitives/src/testing/: mock_client.rs  mod.rs  test_data.rs
solana-primitives/src/types/: account.rs  instruction.rs  message.rs  mod.rs  pda.rs  pubkey.rs  signature.rs  transaction.rs
solana-primitives/src/utils/: debugging.rs  mod.rs  serialization.rs  short_vec.rs  validation.rs
src/: builder.rs  error.rs  jsonrpc.rs  lib.rs
src/crypto/: mod.rs
src/instructions/: associated_token.rs  memo.rs  mod.rs  system.rs
src/types/: account.rs  instruction.rs  message.rs  mod.rs  pda.rs  transaction.rs
src/utils/: mod.rs
