[workspace]
members = ["solana-primitives"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

# Optimize all crates in release mode
[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[workspace.dependencies]
ed25519-dalek = "2.0"
borsh = "0.10.4"
borsh-derive = "0.10.4"
bs58 = "0.5"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22.1"
hex = "0.4.3"
