[workspace]
members = ["solana-primitives"]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Fundamental data structures and tools needed to construct and submit Solana transactions."
repository = "https://github.com/hewig/solana-primitives"
homepage = "https://github.com/hewig/solana-primitives"
documentation = "https://docs.rs/solana-primitives"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[workspace.dependencies]
ed25519-dalek = "2.2"
borsh = { version = "1.6", features = ["derive"] }
bs58 = "0.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
