[package]
name = "solana-primitives"
version.workspace = true
edition.workspace = true
description = "Fundamental data structures and tools needed to construct and submit Solana transactions."
license = "MIT"

[dependencies]
ed25519-dalek.workspace = true
borsh.workspace = true
borsh-derive.workspace = true
bs58.workspace = true
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
log.workspace = true

# Optional dependencies
serde_json = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
default = ["jsonrpc"]
jsonrpc = ["dep:serde_json", "dep:reqwest", "dep:tokio"]
testing = ["dep:uuid"]
