[package]
name = "solana-primitives"
version.workspace = true
edition.workspace = true
description = "Fundamental data structures and tools needed to construct and submit Solana transactions."
license = "MIT"

[dependencies]
ed25519-dalek.workspace = true
borsh.workspace = true
bs58.workspace = true
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
