[package]
name = "solana-primitives"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
ed25519-dalek.workspace = true
borsh.workspace = true
bs58.workspace = true
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
